public/oocss/oocss.css
/* ... */
h6, .h6 {
    font-size: 0.917em;
}
h1, h2, h3, h4, h5, h6, dl, p, blockquote, .box, pre, div.p {
    margin: 10px 0;
}
.hd h1, .hd h2, .hd h3, .hd h4, .hd h5, .hd h6 {
    margin: 5px 0;
}
.hd, .bd, .ft, .intro {
    padding: 0 5px;
}
h1, h2, h3, h4, h5, h6, img {
    padding-bottom: 0;
}
table h1, table h2, table h3, table h4, table h5, table h6, table p, table ul, table ol, table dl, div.p {
    padding: 0;
}
.ptn, .pvn, .pan {
    padding-top: 0 !important;
}
.pts, .pvs, .pas {
    padding-top: 5px !important;
}
.ptm, .pvm, .pam {
    padding-top: 10px !important;
}
.ptl, .pvl, .pal {
    padding-top: 20px !important;
}
.prn, .phn, .pan {
    padding-right: 0 !important;
}
.prs, .phs, .pas {
    padding-right: 5px !important;
}
.prm, .phm, .pam {
    padding-right: 10px !important;
}
.prl, .phl, .pal {
    padding-right: 20px !important;
}
.pbn, .pvn, .pan {
    padding-bottom: 0 !important;
}
.pbs, .pvs, .pas {
    padding-bottom: 5px !important;
}
.pbm, .pvm, .pam {
    padding-bottom: 10px !important;
}
.pbl, .pvl, .pal {
    padding-bottom: 20px !important;
}
.pln, .phn, .pan {
    padding-left: 0 !important;
}
.pls, .phs, .pas {
    padding-left: 5px !important;
}
.plm, .phm, .pam {
    padding-left: 10px !important;
}
.pll, .phl, .pal {
    padding-left: 20px !important;
}
.mtn, .mvn, .man {
    margin-top: 0 !important;
}
.mts, .mvs, .mas {
    margin-top: 5px !important;
}
.mtm, .mvm, .mam {
    margin-top: 10px !important;
}
.mtl, .mvl, .mal {
    margin-top: 20px !important;
}
.mrn, .mhn, .man {
    margin-right: 0 !important;
}
.mrs, .mhs, .mas {
    margin-right: 5px !important;
}
.mrm, .mhm, .mam {
    margin-right: 10px !important;
}
.mrl, .mhl, .mal {
    margin-right: 20px !important;
}
.mbn, .mvn, .man {
    margin-bottom: 0 !important;
}
.mbs, .mvs, .mas {
    margin-bottom: 5px !important;
}
.mbm, .mvm, .mam {
    margin-bottom: 10px !important;
}
.mbl, .mvl, .mal {
    margin-bottom: 20px !important;
}
.mln, .mhn, .man {
    margin-left: 0 !important;
}
.mls, .mhs, .mas {
    margin-left: 5px !important;
}
.mlm, .mhm, .mam {
    margin-left: 10px !important;
}
.mll, .mhl, .mal {
    margin-left: 20px !important;
}
strong {
    font-weight: bold;
}
em {
    font-style: italic;
}
.date {
    color: #808080;
    font-size: 0.917em;
}
.note {
    color: #808080;
    font-style: italic;
}
.legal {
    font-size: 0.917em;
}
.simpleList {
    margin: 10px 0;
}
.inlineList li {
    display: inline-block;
    padding-right: 0.5em;
    vertical-align: top;
}
.inlineListExt li {
    display: inline;
}
.inlineListExt > li:after {
    content: "•";
    padding: 0 4px 0 6px;
}
.inlineListExt li:last-child:after {
    content: "";
}
.detailList {
    overflow: auto;
}
.detailList dt {
    margin: 0.2em 0.3em 0 0;
}
.detailList dd {
    margin-top: 0.2em;
    margin-left: 1em;
}
.detailListExt dt {
    padding: 3px 10px;
    text-align: right;
    width: 33%;
}
.detailListExt dd {
    padding: 3px 10px;
}
.commentList ul {
    clear: both;
}
.commentList li {
    padding: 4px;
}
.commentList b.arrow_up {
    display: block;
    float: left;
    height: 0;
    margin-left: 10px;
    width: 0;
}
.breadcrumb {
    font-size: 1.083em;
    padding: 2px 0 10px;
}
.breadcrumb li {
    display: inline-block;
}
.breadcrumb li:before {
    content: ">";
    display: inline-block;
    padding: 0 7px 0 4px;
}
.breadcrumb li:first-child:before {
    content: "";
    padding: 0;
}
.basicList {
    margin: 10px 0;
}
.basicList li {
    padding: 0.2em 0;
}
.basicListSm li {
    margin: 5px 0;
}
.basicListMed li {
    margin: 10px 0;
}
.basicListLg li {
    margin: 20px 0;
}
.checkList li {
    margin: 5px 0;
    padding-left: 2em;
}
.subcheckList {
    padding-left: 3em;
}
.subcheckList li {
    background: none repeat scroll 0 0 transparent;
    list-style: disc outside none;
    padding-left: 0;
}
.subcheckList li.done {
    text-align: left;
}
.enumList {
    padding-left: 20px;
}
.enumList li {
    list-style: decimal outside none;
    margin: 3px 0 15px 0px;
}
.bulletList {
    padding-left: 20px;
}
.bulletList li {
    list-style: disc outside none;
    margin: 3px 0 15px 0;
}
.ideaList ul {
    margin: 4px;
}
.ideaList li {
    padding: 15px 15px 15px 3px;
}
.pipedList li {
    display: inline-block;
    padding: 0 6px 0 5px;
}
.pipedList:after {
    clear: both;
    content: ".";
    display: block;
    height: 0 !important;
    line-height: 0;
    overflow: hidden;
    visibility: hidden;
}
.pipedList {
    clear: both;
}
.pipedList .img, .pipedList .imgExt {
    float: none;
}
.hoverList li:hover, .hoverList li:focus {
    background-color: #E3F3FF;
}
.hoverList a, .hoverList a:link {
    display: block;
    padding: 3px 0;
}
hr {
    border: medium none;
    height: 0;
    margin: 5px 0;
}
hr.divider {
    border-top: 1px dotted #D9D9D9;
}
hr.divider_strong {
    border-top: 2px solid #000000;
}
.data {
    position: relative;
    text-align: left;
}
.data table {
    width: 100%;
}
.data tr {
    vertical-align: top;
}
.txtC, table .txtC, table tr .txtC {
    text-align: center;
}
.txtL, table .txtL, table tr .txtL {
    text-align: left;
}
.txtR, table .txtR, table tr .txtR {
    text-align: right;
}
.txtT, table .txtT, table tr .txtT {
    vertical-align: top;
}
.txtB, table .txtB, table tr .txtB {
    vertical-align: bottom;
}
.txtM, table .txtM, table tr .txtM {
    vertical-align: middle;
}
.data th, .data td {
    padding: 4px 7px;
}
.data thead th, .data thead td {
#    white-space: nowrap;
}
.btn {
    cursor: pointer;
    display: inline-block;
    margin: 1px;
    overflow: visible;
    padding: 2px 3px;
    position: relative;
    white-space: pre;
}
a.btn {
    padding: 3px 6px;
}
.btn:active {
    bottom: -1px;
}
.disabledBtn, .disabledBtn:focus, .disabledBtn:hover, .disabledBtn:active, .disabledBtn:visited, .disabledPromoBtn, .disabledPromoBtn:active, .disabledPromoBtn:focus, .disabledPromoBtn:hover {
    bottom: 0;
}
/* ... */

